--- a/Ionic/src/app/componentes/prepost/prepost.component.html
+++ b/Ionic/src/app/componentes/prepost/prepost.component.html
@@ -1,3 +1,19 @@
-<p>
-  prepost works!
-</p>
+<ion-card>
+	<ion-card-content>
+		<ion-grid>
+			<ion-row></ion-row>
+			<ion-row></ion-row>
+				<ion-row>
+					<ion-col size = "1">
+						<div class = "profile">
+							<img src = "https://lh3.googleusercontent.com/eOLK2Xx6eBOtRcUVXjQNmHz4AselbWQGpKVtSkIM-tbQ3ypfORCwhZn_Od4vMfkwEeE1=s138">
+						</div>
+					</ion-col>
+					<ion-col>
+						<ion-chip></ion-chip>
+					</ion-col>
+				</ion-row>
+				<ion-row>Texto</ion-row>
+		</ion-grid>	
+	</ion-card-content>		
+</ion-card>
