--- a/Ionic/src/app/cadastro/cadastro.page.html
+++ b/Ionic/src/app/cadastro/cadastro.page.html
@@ -19,7 +19,7 @@
 
           <ion-item [class.invalid]="registerForm.controls.username.invalid && registerForm.controls.username.touched" 
           class="ion-margin-top bg-transparent">
-              <ion-input type="text" placeholder="Nome de Usuário" formControlName="name"></ion-input>
+              <ion-input type="text" placeholder="Nome de Usuário" formControlName="username"></ion-input>
             </ion-item>
 
           <ion-item [class.invalid]="registerForm.controls.email.invalid && registerForm.controls.email.touched" 
