-estrutura do card

--- a/Ionic/src/app/componentes/prepost/prepost.component.html
+++ b/Ionic/src/app/componentes/prepost/prepost.component.html
@@ -1,19 +1,9 @@
 <ion-card>
 	<ion-card-content>
 		<ion-grid>
-			<ion-row></ion-row>
-			<ion-row></ion-row>
-				<ion-row>
-					<ion-col size = "1">
-						<div class = "profile">
-							<img src = "https://lh3.googleusercontent.com/eOLK2Xx6eBOtRcUVXjQNmHz4AselbWQGpKVtSkIM-tbQ3ypfORCwhZn_Od4vMfkwEeE1=s138">
-						</div>
-					</ion-col>
-					<ion-col>
-						<ion-chip></ion-chip>
-					</ion-col>
-				</ion-row>
-				<ion-row>Texto</ion-row>
+			<ion-col class="photo" size="4">
+			</ion-col>
+
 		</ion-grid>	
 	</ion-card-content>		
 </ion-card>
