--- a/Ionic/src/app/cadastro/cadastro.page.html
+++ b/Ionic/src/app/cadastro/cadastro.page.html
@@ -12,22 +12,22 @@
       <form [formGroup]="registerForm" (ngSubmit)="submitForm(registerForm)">
         <div class="form">
           <ion-list>
-          <ion-item [class.invalid]="registerForm.controls.name.invalid && registerForm.controls.name.touched" 
+          <ion-item id="entrada" [class.invalid]="registerForm.controls.name.invalid && registerForm.controls.name.touched" 
           class="ion-margin-top bg-transparent">
             <ion-input type="text" placeholder="Nome e Sobrenome" formControlName="name"></ion-input>
           </ion-item>
 
-          <ion-item [class.invalid]="registerForm.controls.username.invalid && registerForm.controls.username.touched" 
+          <ion-item id="entrada" [class.invalid]="registerForm.controls.username.invalid && registerForm.controls.username.touched" 
           class="ion-margin-top bg-transparent">
               <ion-input type="text" placeholder="Nome de Usuário" formControlName="username"></ion-input>
             </ion-item>
 
-          <ion-item [class.invalid]="registerForm.controls.email.invalid && registerForm.controls.email.touched" 
+          <ion-item id="entrada" [class.invalid]="registerForm.controls.email.invalid && registerForm.controls.email.touched" 
           class="ion-margin-top bg-transparent">
               <ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
           </ion-item>
   
-          <ion-item [class.invalid]="registerForm.controls.password.invalid && registerForm.controls.password.touched" 
+          <ion-item id="entrada" [class.invalid]="registerForm.controls.password.invalid && registerForm.controls.password.touched" 
           class="ion-margin-top bg-transparent">
               <ion-input type="password" placeholder="Senha" formControlName="password"></ion-input>
           </ion-item>
@@ -35,7 +35,7 @@
         </div>
 
         <ion-row class="ion-justify-content-center">
-          <ion-button type="submit" shape="round" size="small"><strong>Cadastrar</strong></ion-button>
+          <ion-button type="submit" expand="block" size="small"><strong>Cadastrar</strong></ion-button>
           <!--[disabled]="registerForm.invalid"-->
         </ion-row>
     
