+ nova estrutura com ion chip

--- a/Ionic/src/app/tab1/tab1.page.html
+++ b/Ionic/src/app/tab1/tab1.page.html
@@ -1,4 +1,8 @@
 <ion-app>
-  <app-prepost></app-prepost>
+  <ion-grid>
+    <ion-row>
+        <app-prepost></app-prepost>
+    </ion-row>
+  </ion-grid>   
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
