--- a/Ionic/src/app/componentes/prepost/prepost.component.html
+++ b/Ionic/src/app/componentes/prepost/prepost.component.html
@@ -1,9 +1,13 @@
 <ion-card>
-	<ion-card-content>
-		<ion-grid>
-			<ion-col class="photo" size="4">
-			</ion-col>
-
-		</ion-grid>	
-	</ion-card-content>		
+		<img src="https://observatoriodocinema.bol.uol.com.br/wp-content/uploads/2019/07/cropped-Batman-lista-1-3.jpg">
+	<ion-card-header class>
+		<ion-card-subtitle class="profilephoto">
+			<ion-chip>
+				<ion-avatar>
+					<img src ="https://i.ytimg.com/vi/58R-WRSV_A0/maxresdefault.jpg">
+				</ion-avatar>
+				<ion-label>Giovanna</ion-label>
+			</ion-chip>
+		</ion-card-subtitle>
+	</ion-card-header>
 </ion-card>
