--- a/Ionic/src/app/componentes/prepost/prepost.component.scss
+++ b/Ionic/src/app/componentes/prepost/prepost.component.scss
@@ -1,18 +1,6 @@
 ion-card{
-	width:200px !important;
-	height:120px !important;
 	border-radius:20px;
 }
-
-.empty{
-	height:60px;
-}
-
-.photo{
-	--background-image: url("")
-}
-
-.blurred{
-	background-color:#000000;
-	filter:blur(5px);
+.prophilephoto{
+	border-radius:20px;
 }
