--- a/Ionic/src/app/componentes/prepost/prepost.component.html
+++ b/Ionic/src/app/componentes/prepost/prepost.component.html
@@ -1,13 +1,16 @@
 <ion-card>
 		<img src="https://observatoriodocinema.bol.uol.com.br/wp-content/uploads/2019/07/cropped-Batman-lista-1-3.jpg">
 	<ion-card-header class>
-		<ion-card-subtitle class="profilephoto">
-			<ion-chip>
+		<ion-card-title>
+			<ion-chip class="profileinfo">
 				<ion-avatar>
 					<img src ="https://i.ytimg.com/vi/58R-WRSV_A0/maxresdefault.jpg">
 				</ion-avatar>
-				<ion-label>Giovanna</ion-label>
+				<ion-label><strong>Giovanna</strong></ion-label>
 			</ion-chip>
-		</ion-card-subtitle>
+		</ion-card-title>
+		<ion-card-content class="postext">
+			<h3>Esse próximo filme do Batman promete hein!!!!</h3>
+		</ion-card-content>
 	</ion-card-header>
 </ion-card>
