--- a/Ionic/src/app/componentes/prepost/prepost.component.html
+++ b/Ionic/src/app/componentes/prepost/prepost.component.html
@@ -1,6 +1,6 @@
 <ion-card>
 		<img src="https://observatoriodocinema.bol.uol.com.br/wp-content/uploads/2019/07/cropped-Batman-lista-1-3.jpg">
-	<ion-card-header class>
+	<ion-card-header>
 		<ion-card-title>
 			<ion-chip class="profileinfo">
 				<ion-avatar>
