#Link Quero Criar uma nova Conta

--- a/Ionic/src/app/login/login.page.html
+++ b/Ionic/src/app/login/login.page.html
@@ -3,7 +3,7 @@
   <div class="bg-login">
       <!--imagem Logo-->
       <div class="center">
-        <img src="assets/icon/img/logo.png" alt="Logo" class="logo" width="300">
+        <img src="assets/img/logo.png" alt="Logo" class="logo" width="300">
       </div>
       <!--Texto-->
       <h6 class="Text">Entre com sua conta para começar</h6>
@@ -23,12 +23,16 @@
           </ion-item>
           </ion-list>
         </div>
-
+        <!--botao cadastrar-->
         <ion-row class="ion-justify-content-center">
           <ion-button type="submit" expand="block" size="small"><strong>Entrar</strong></ion-button>
           <!--[disabled]="registerForm.invalid"-->
         </ion-row>
-        <p class="Link">Não possui Conta? <a>Cadastrar-se</a></p>
+        <!--Criar nova conta-->
+        <div class="txtCadastro">
+          Quero criar uma nova conta
+        </div>
+
     
       </form>
       
