--- a/Ionic/src/app/login/login.page.scss
+++ b/Ionic/src/app/login/login.page.scss
@@ -24,7 +24,7 @@ h6{
 .form {
     --background:black;
     padding:35px;
-    padding-top: 25px;
+    padding-top: 30px;
     
 }
 ion-list {
@@ -51,11 +51,13 @@ ion-input {
 }
 
 ion-button {
-    margin-top:20px;
+    margin-top:30px;
     --background: #fff;
     color: #CC0000;
 }
-p {
+.txtCadastro {
     text-align: center;
     font-size: 14px;
+    color:beige;
+    margin-top: 10px;
 }
