estrutura da página em andamento

--- a/Ionic/src/app/componentes/prepost/prepost.component.html
+++ b/Ionic/src/app/componentes/prepost/prepost.component.html
@@ -11,6 +11,9 @@
 		</ion-card-title>
 	</ion-card-header>
 	<ion-card-content class="postext">
-			<h3>Esse próximo filme do Batman promete hein!!!!</h3>
+			<h3>Esse próximo filme do Batman promete hein!!!!
+				Robert Pattinson será o melhor e mais detetivesco
+				Morcego dos cinemas!
+			</h3>
 	</ion-card-content>
 </ion-card>
