--- a/Ionic/src/app/componentes/prepost/prepost.component.scss
+++ b/Ionic/src/app/componentes/prepost/prepost.component.scss
@@ -1,7 +1,7 @@
 ion-card{
 	border-radius:20px;
 	--background: black;	
-	--color:#ffffff !important;
+	--color:#ffffff;
 }
 .profileinfo{
 	--background:#ffffff;
