--- a/Ionic/src/app/post/post.page.html
+++ b/Ionic/src/app/post/post.page.html
@@ -21,6 +21,12 @@
          <img class="photo" src="https://observatoriodocinema.bol.uol.com.br/wp-content/uploads/2019/07/cropped-Batman-lista-1-3.jpg">
        </div>
      </ion-row>
+     <ion-row>
+       <div class="rect"></div> 
+     </ion-row>
+     <ion-row>
+       <h4 class="commentext">Comentários</h4>
+     </ion-row>
   </ion-grid>  
     
 
