--- a/Ionic/src/app/post/post.page.scss
+++ b/Ionic/src/app/post/post.page.scss
@@ -14,7 +14,6 @@
     border-radius:100%;
     margin-left:3vw;
     box-shadow:0px 2px 3px black;
-
   
 }
 
@@ -36,4 +35,23 @@ ion-chip{
     color:#cc0000;
     margin-top:1.5vh;
     box-shadow:0px 2px 3px black;
+}
+
+.rect{
+    background-color:#cc0000;
+    width: 91vw;
+    height:1vh;
+    border-radius:10px;
+    margin-left:3.3vw;
+    margin-top:2vw;
+    margin-bottom:2vw;
+}
+
+.commentext{
+    margin-left:3.3vw;
+    margin-bottom:3vh;
+    margin-top:1.2vh;
+    color:#cc0000;
+    font-weight:bold;
+
 }
