--- a/Ionic/src/app/post/post.page.html
+++ b/Ionic/src/app/post/post.page.html
@@ -27,7 +27,9 @@
      <ion-row>
        <h4 class="commentext">Comentários</h4>
      </ion-row>
-  </ion-grid>  
+  </ion-grid>
+  <ion-list>
+  </ion-list> 
     
 
 </ion-content>
