--- a/Ionic/src/app/post/post.page.scss
+++ b/Ionic/src/app/post/post.page.scss
@@ -34,7 +34,7 @@ ion-chip{
     font-weight:bold;
     color:#cc0000;
     margin-top:1.5vh;
-    box-shadow:0px 2px 3px black;
+    
 }
 
 .rect{
@@ -54,4 +54,9 @@ ion-chip{
     color:#cc0000;
     font-weight:bold;
 
+}
+
+ion-button{
+    margin-bottom:1.2vh;
+    margin-top:1.2vh;   
 }
