--- a/Ionic/src/app/post/post.page.html
+++ b/Ionic/src/app/post/post.page.html
@@ -1,40 +1,44 @@
-<ion-content>
-  <ion-grid>
-    <ion-row>
-        <div>
-          <img class="idphoto"
-          src="https://abrilvejasp.files.wordpress.com/2019/03/imagem-e-palavra-c2a9casaazulfilms-ecrannoir-4.jpg?quality=70&strip=info&w=928">
-        </div>
-        <ion-chip outline>
-          Giovanna
-        </ion-chip>
-    </ion-row>
-    <ion-row>
-      <div class="text">
-            Esse próximo filme do Batman promete hein!!!!
-            Robert Pattinson será o melhor e mais detetivesco
-            Morcego dos cinemas!
-      </div>
-     </ion-row> 
-     <ion-row>
-       <div class="setcenter">
-         <img class="photo" src="https://observatoriodocinema.bol.uol.com.br/wp-content/uploads/2019/07/cropped-Batman-lista-1-3.jpg">
-       </div>
-     </ion-row>
-     <ion-row justify-content-center>
-       <ion-button color="light" shape="round">
-        <ion-icon name="heart" color="danger"></ion-icon>
-       </ion-button>
-     </ion-row>
-     <ion-row>
-       <div class="rect"></div> 
-     </ion-row>
-     <ion-row>
-       <h4 class="commentext">Comentários</h4>
-     </ion-row>
-  </ion-grid>
-  <ion-list>
-  </ion-list> 
-    
+<ion-app>
+  <app-header></app-header>
 
-</ion-content>
+  <ion-content>
+    <ion-grid>
+      <ion-row>
+          <div>
+            <img class="idphoto"
+            src="https://abrilvejasp.files.wordpress.com/2019/03/imagem-e-palavra-c2a9casaazulfilms-ecrannoir-4.jpg?quality=70&strip=info&w=928">
+          </div>
+          <ion-chip outline>
+            Giovanna
+          </ion-chip>
+      </ion-row>
+      <ion-row>
+        <div class="text">
+              Esse próximo filme do Batman promete hein!!!!
+              Robert Pattinson será o melhor e mais detetivesco
+              Morcego dos cinemas!
+        </div>
+      </ion-row> 
+      <ion-row>
+        <div class="setcenter">
+          <img class="photo" src="https://observatoriodocinema.bol.uol.com.br/wp-content/uploads/2019/07/cropped-Batman-lista-1-3.jpg">
+        </div>
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-button color="light" shape="round">
+          <ion-icon name="heart" color="danger"></ion-icon>
+        </ion-button>
+      </ion-row>
+      <ion-row>
+        <div class="rect"></div> 
+      </ion-row>
+      <ion-row>
+        <h4 class="commentext">Comentários</h4>
+      </ion-row>
+    </ion-grid>
+    <ion-list>
+    </ion-list> 
+      
+
+  </ion-content>
+</ion-app>
