--- a/Ionic/src/app/post/post.page.html
+++ b/Ionic/src/app/post/post.page.html
@@ -3,22 +3,20 @@
     <ion-row>
         <div>
           <img class="idphoto"
-          src="https://abrilvejasp.files.wordpress.com/2019/03/imagem-e-palavra-c2a9casaazulfilms-ecrannoir-4.jpg?quality=70&strip=info&w=928">
+          src=" {{post.user_id.foto}}">
         </div>
         <ion-chip outline>
-          Giovanna
+          {{post.user_id.nome}}
         </ion-chip>
     </ion-row>
     <ion-row>
       <div class="text">
-            Esse próximo filme do Batman promete hein!!!!
-            Robert Pattinson será o melhor e mais detetivesco
-            Morcego dos cinemas!
+           {{post.texto}}
       </div>
      </ion-row> 
      <ion-row>
        <div class="setcenter">
-         <img class="photo" src="https://observatoriodocinema.bol.uol.com.br/wp-content/uploads/2019/07/cropped-Batman-lista-1-3.jpg">
+         <img class="photo" src="{{post.imagem}}">
        </div>
      </ion-row>
      <ion-row justify-content-center>
