--- a/Ionic/src/app/componentes/prepost/prepost.component.html
+++ b/Ionic/src/app/componentes/prepost/prepost.component.html
@@ -1,5 +1,5 @@
 <ion-card>
-		<img src="https://observatoriodocinema.bol.uol.com.br/wp-content/uploads/2019/07/cropped-Batman-lista-1-3.jpg">
+		<img src="{{post.imagem}}">
 	<ion-card-header>
 		<ion-card-title>
 			<ion-chip class="profileinfo">
